[tool.poetry]
name = "neural-style-transfer"
version = "0.1.0"
description = ""
authors = ["Alexey Savchuk <alexey.a.savchuk@yandex.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
mlflow = "^2.10.0"
torch = "^2.2.0"
torchvision = "^0.17.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
